# Intrinsic

./: .appveyor.yml  .clang-format  .dir-locals.el  .gitattributes  .gitignore  .gitmodules  .projectile  .travis.yml  CMakeLists.txt  CREDITS.md  Doxyfile  GETTING_STARTED.md  README.md
Intrinsic/: Intrinsic.rc
Intrinsic/src/: main.cpp
IntrinsicAssetManagement/src/: IntrinsicAssetManagementHelperFbx.h  IntrinsicAssetManagementImporterFbx.cpp  IntrinsicAssetManagementImporterFbx.h  IntrinsicAssetManagementImporterTexture.cpp  IntrinsicAssetManagementImporterTexture.h  IntrinsicAssetManagementProcessorPhysics.cpp  IntrinsicAssetManagementProcessorPhysics.h  IntrinsicAssetManagementResourcesAsset.cpp  IntrinsicAssetManagementResourcesAsset.h  stdafx.cpp  stdafx_assets.h
IntrinsicCore/src/: .IntrinsicRendererHelper.h.kate-swp  ArHosekSkyModelData_RGB.h  IntrinsicCoreAlgorithm.cpp  IntrinsicCoreAlgorithm.h  IntrinsicCoreApplication.cpp  IntrinsicCoreApplication.h  IntrinsicCoreComponentsCamera.cpp  IntrinsicCoreComponentsCamera.h  IntrinsicCoreComponentsCameraController.cpp  IntrinsicCoreComponentsCameraController.h  IntrinsicCoreComponentsCharacterController.cpp  IntrinsicCoreComponentsCharacterController.h  IntrinsicCoreComponentsDecal.cpp  IntrinsicCoreComponentsDecal.h  IntrinsicCoreComponentsIrradianceProbe.cpp  IntrinsicCoreComponentsIrradianceProbe.h  IntrinsicCoreComponentsLight.cpp  IntrinsicCoreComponentsLight.h  IntrinsicCoreComponentsMesh.cpp  IntrinsicCoreComponentsMesh.h  IntrinsicCoreComponentsNode.cpp  IntrinsicCoreComponentsNode.h  IntrinsicCoreComponentsPlayer.cpp  IntrinsicCoreComponentsPlayer.h  IntrinsicCoreComponentsPostEffectVolume.cpp  IntrinsicCoreComponentsPostEffectVolume.h  IntrinsicCoreComponentsRigidBody.cpp  IntrinsicCoreComponentsRigidBody.h  IntrinsicCoreComponentsScript.cpp  IntrinsicCoreComponentsScript.h  IntrinsicCoreComponentsSpecularProbe.cpp  IntrinsicCoreComponentsSpecularProbe.h  IntrinsicCoreComponentsSwarm.cpp  IntrinsicCoreComponentsSwarm.h  IntrinsicCoreCrashDumpGeneratorWin32.h  IntrinsicCoreDod.h  IntrinsicCoreDodComponents.h  IntrinsicCoreDodResources.h  IntrinsicCoreEntity.cpp  IntrinsicCoreEntity.h  (+108 more)
IntrinsicEd/: IntrinsicEd.qrc  IntrinsicEd.rc
IntrinsicEd/media/: logo.psd
IntrinsicEd/src/: IntrinsicEd.cpp  IntrinsicEd.h  IntrinsicEd.ui  IntrinsicEdManagerWindow.ui  IntrinsicEdManagerWindowAsset.cpp  IntrinsicEdManagerWindowAsset.h  IntrinsicEdManagerWindowBase.cpp  IntrinsicEdManagerWindowBase.h  IntrinsicEdManagerWindowGpuProgram.cpp  IntrinsicEdManagerWindowGpuProgram.h  IntrinsicEdManagerWindowImage.cpp  IntrinsicEdManagerWindowImage.h  IntrinsicEdManagerWindowMaterial.cpp  IntrinsicEdManagerWindowMaterial.h  IntrinsicEdManagerWindowMesh.cpp  IntrinsicEdManagerWindowMesh.h  IntrinsicEdManagerWindowPostEffect.cpp  IntrinsicEdManagerWindowPostEffect.h  IntrinsicEdManagerWindowScript.cpp  IntrinsicEdManagerWindowScript.h  IntrinsicEdNodeView.cpp  IntrinsicEdNodeView.h  IntrinsicEdNodeView.ui  IntrinsicEdNodeViewTreeWidget.cpp  IntrinsicEdNodeViewTreeWidget.h  IntrinsicEdNotificationBase.cpp  IntrinsicEdNotificationBase.h  IntrinsicEdNotificationSimple.cpp  IntrinsicEdNotificationSimple.h  IntrinsicEdNotificationSimple.ui  IntrinsicEdPrefabsBrowser.cpp  IntrinsicEdPrefabsBrowser.h  IntrinsicEdPrefabsBrowser.ui  IntrinsicEdPrefabsView.cpp  IntrinsicEdPrefabsView.h  IntrinsicEdPropertyEditorBase.h  IntrinsicEdPropertyEditorBool.ui  IntrinsicEdPropertyEditorColor.cpp  IntrinsicEdPropertyEditorColor.h  IntrinsicEdPropertyEditorColor.ui  (+39 more)
IntrinsicRenderer/src/: IntrinsicRendererDebugging.cpp  IntrinsicRendererDebugging.h  IntrinsicRendererDrawCallDispatcher.cpp  IntrinsicRendererEnumsStructs.h  IntrinsicRendererGpuMemoryManager.cpp  IntrinsicRendererGpuMemoryManager.h  IntrinsicRendererHelper.h  IntrinsicRendererMaterialBuffer.cpp  IntrinsicRendererRenderPassBase.cpp  IntrinsicRendererRenderPassBase.h  IntrinsicRendererRenderPassBloom.cpp  IntrinsicRendererRenderPassBloom.h  IntrinsicRendererRenderPassClustering.cpp  IntrinsicRendererRenderPassClustering.h  IntrinsicRendererRenderPassDebug.cpp  IntrinsicRendererRenderPassDebug.h  IntrinsicRendererRenderPassGenericBlur.cpp  IntrinsicRendererRenderPassGenericBlur.h  IntrinsicRendererRenderPassGenericFullscreen.cpp  IntrinsicRendererRenderPassGenericFullscreen.h  IntrinsicRendererRenderPassGenericMesh.cpp  IntrinsicRendererRenderPassGenericMesh.h  IntrinsicRendererRenderPassPerPixelPicking.cpp  IntrinsicRendererRenderPassShadow.cpp  IntrinsicRendererRenderPassShadow.h  IntrinsicRendererRenderPassVolumetricLighting.cpp  IntrinsicRendererRenderPassVolumetricLighting.h  IntrinsicRendererRenderProcess.cpp  IntrinsicRendererRenderProcess.h  IntrinsicRendererRenderProcessUniformManager.cpp  IntrinsicRendererRenderProcessUniformManager.h  IntrinsicRendererRenderStates.cpp  IntrinsicRendererRenderStates.h  IntrinsicRendererRenderSystem.cpp  IntrinsicRendererResourcesBuffer.cpp  IntrinsicRendererResourcesBuffer.h  IntrinsicRendererResourcesComputeCall.cpp  IntrinsicRendererResourcesComputeCall.h  IntrinsicRendererResourcesDrawCall.cpp  IntrinsicRendererResourcesFramebuffer.cpp  (+20 more)
app/: renderer_config.json  renderer_config_simple.json  settings.json
app/config/: material_pass_config.json  (+2 more)
cmake/: FindBugSplat.cmake  FindFBX.cmake  FindGLSLang.cmake  FindGoogleTest.cmake  FindLuaJIT.cmake  FindPhysX.cmake  FindQt5.cmake  FindSDL2.cmake  FindVulkan.cmake  Qt5.cmake
documentation/: Doxyfile
scripts/: ReformatSource.sh
scripts_linux/: Build  ConfigAndBuildDependencies  Config_Release  Config_Release_CompileOnly  Config_Release_GCC  CopyLibsToAppDir  Run_Release
scripts_win32/: BuildAndRunNoCheck_Release.bat  BuildAndRun_Debug.bat  BuildAndRun_Release.bat  Build_Debug.bat  Build_Release.bat  Config.bat  ConfigAndBuildDependencies.bat  ConfigAndBuildDependenciesVS15.bat  ConfigVS15.bat  ConfigVS15_FinalBuild.bat  Config_FinalBuild.bat  CopyDllsToAppDir_Debug.bat  CopyDllsToAppDir_Release.bat  CreateDocumentation.bat  DistroCreate.bat  DistroCreateAndZip.bat  DistroZip.bat  RunCloc.bat
(+874 files in other folders)
